--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
         <!-- Search bar -->
         <div class="search-bar__s2">
-            <input type="text"  placeholder=" Search for anything....." style="font-weight: lighter;" />
-        </div>
+    <i class="fa-solid fa-magnifying-glass search-icon"></i>
+    <input type="text" placeholder=" Search for anything....." />
+</div>  
 
         <!-- Navigation links -->
         <div class="nav-links__s3">
@@ -61,6 +62,11 @@
     </div>
     <!--Sale-image-->
     <div class="sale-image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash sale! 24 hours to save</h2>
+            <p>Get the top Courses for just 499. Just one day to save but a lifetime to learn</p>
+
+        </div>
         <img src="img/sale.png">
     </div>
 
