--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="navbar">
         <!-- Logo -->
         <div class="logo__s1">
-            <h1>Udemy</h1>
+            <h1>Udemy 123</h1>
         </div>
 
         <!-- Search bar -->
